--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -2,16 +2,31 @@
 # https://github.com/firebase/firebase-tools
 
 name: Deploy to Firebase Hosting on merge
+
 on:
   push:
     branches:
       - main
+
 jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
+
     steps:
       - uses: actions/checkout@v4
+
+      # ✅ Install Node so npm exists
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 20
+
+      # ✅ Install dependencies before building
+      - run: npm install
+
+      # ✅ Build your app (Vite or React)
       - run: npm run build
+
+      # ✅ Deploy to Firebase
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: ${{ secrets.GITHUB_TOKEN }}
