--- a/.gitignore
+++ b/.gitignore
@@ -24,4 +24,6 @@ dist-ssr
 *.sw?
 
 # PHP signup storage file
-emails.txt
+email.txt
+utilities/contact-submissions.jsonl
+utilities/contact-submissions.txt
